# white-wizard

./: .gitignore  .mcp.json  LICENSE  README.md  ai_client.py  build.py  pyproject.toml  test_ai_client.py  todo.md  white_wizard.py  wizard.yaml
prompts/: team_custom.md  wizard_yaml.md
tests/: test_ai_client.py  test_app.py  test_integration.py
white_wizard/: __init__.py  __main__.py  ai_client.py  app.py  db.py  ui.py
white_wizard/prompts/: analyze_codebase.md  generate_agents.md  stream_question.md  stream_thought.md  subagent_guidelines.md  team_custom.md  team_dev.md  team_devops.md  team_performance.md  team_security.md  wizard_yaml.md
