[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "white-wizard"
version = "0.1.0"
description = "Conjure multi-agent orchestration systems with a single button"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["ai", "agents", "orchestration", "cli", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = []

[project.scripts]
wizard = "white_wizard.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["white_wizard*"]

[tool.setuptools.package-data]
"white_wizard.prompts" = ["*.md"]
